--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# Lock files
+package-lock.json
+yarn.lock
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -102,3 +106,18 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Typechain files
+typechain/
+
+# Articats
+artifacts/
+
+# Cache
+cache/
+
+# Build
+build/
+
+# Dist
+dist/
