feat: remove roles, members functions, EMPTY_ROLE, general voting, Treasury contract

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "npx hardhat compile",
+    "compile": "npx hardhat compile",
     "clean": "npx hardhat clean",
     "test": "npx hardhat test",
     "format": "prettier ./**/*.ts --write && prettier --write 'contracts/**/*.sol'",
