feat: general voting tests, remove Ownable

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "hardhat compile",
     "clean": "hardhat clean",
     "compile": "npx hardhat compile",
+    "build": "npx hardhat compile",
     "clean": "npx hardhat clean",
     "test": "npx hardhat test",
     "format": "prettier ./**/*.ts --write && prettier --write 'contracts/**/*.sol'",
