--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "bunyan": "^1.8.15",
     "dotenv": "^10.0.0",
     "hardhat-gas-reporter": "^1.0.4",
-    "node-plantuml": "github:shahankhatch/node-plantuml#shahan/node-plantuml-5",
+    "node-plantuml": "github:shahankhatch/node-plantuml",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
     "web3": "^1.5.2"
   },
