--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint . --ext .ts",
     "prepare": "husky install",
     "size": "npx hardhat run scripts/contractBytecodeSize.js",
-    "plant": "node ./scripts/plantuml.mjs"
+    "plant": "node ./scripts/plantuml.mjs ./docs/flows/flows.puml"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
