--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,24 @@
 {
   "compilerOptions": {
-    "target": "es2020",                       
-    "module": "commonjs",                     
-    "lib": ["es2020"],                        
-    "declaration": true,                      
-    "declarationMap": true,                  
-    "sourceMap": true,                        
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "removeComments": false,                  
-    "strict": true,                          
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["es2020"],
+    "module": "commonjs",
     "moduleResolution": "node",
-    "types": ["node", "mocha"],               
-    "allowSyntheticDefaultImports": true,     
-    "esModuleInterop": true,                  
-    "experimentalDecorators": true,          
-    "skipLibCheck": true,                    
-    "forceConsistentCasingInFileNames": true
+    "outDir": "dist",
+    "removeComments": false,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2020",
+    "types": ["node", "mocha"]
   },
   "files": ["./hardhat.config.ts"],
-  "include": [
-    "./config/**/*.ts",
-    "./scripts/**/*.ts",
-    "./test/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./config/**/*.ts", "./scripts/**/*.ts", "./test/**/*.ts"],
+  "exclude": ["node_modules"]
 }
