--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "husky": "^7.0.2",
     "lint-staged": "^12.1.2",
     "node-plantuml": "windranger-io/node-plantuml#fcfc730",
+    "bitdao-token-contract": "windranger-io/bit-token-contract#v1.0.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
