--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "build": "npx hardhat compile",
-    "clean": "npx hardhat clean",    
+    "clean": "npx hardhat clean",
     "test": "mocha --timeout 10000 --exit --recursive --require ts-node/register 'test/**/*.test.ts'",
     "format": "prettier ./**/*.ts --write && prettier --write 'contracts/**/*.sol'",
     "lint": "eslint . --ext .ts",
@@ -28,7 +28,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.0",
+    "@openzeppelin/contracts-upgradeable": "^4.4.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/bunyan": "^1.8.8",
