--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
@@ -49,20 +50,14 @@
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "web3": "^1.6.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.18"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-etherscan": "^2.1.6",
-    "@nomiclabs/hardhat-ganache": "^2.0.1",
-    "@nomiclabs/hardhat-truffle5": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.3",
     "bunyan": "^1.8.15",
-    "dotenv": "^10.0.0",
-    "hardhat-gas-reporter": "^1.0.4",
-    "node-plantuml": "github:shahankhatch/node-plantuml",
-    "prettier-plugin-solidity": "^1.0.0-beta.18",
-    "web3": "^1.6.1"
+    "dotenv": "^10.0.0"
   },
   "lint-staged": {
     "*.ts": [
