--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "build": "npx hardhat compile",
-    "clean": "npx hardhat clean",    
+    "clean": "npx hardhat clean",
     "test": "mocha --timeout 10000 --exit --recursive --require ts-node/register 'test/**/*.test.ts'",
     "format": "prettier ./**/*.ts --write && prettier --write 'contracts/**/*.sol'",
     "lint": "eslint . --ext .ts",
@@ -26,34 +26,37 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.8",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.0",
+    "@openzeppelin/contracts-upgradeable": "^4.4.0",
+    "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
-    "@types/bunyan": "^1.8.8",
+    "@types/bunyan": "^1.8.7",
     "@types/chai": "^4.2.21",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.11",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@types/node": "^16.7.10",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "bitdao-token-contract": "windranger-io/bit-token-contract#v1.0.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
-    "hardhat": "^2.7.0",
+    "hardhat": "^2.6.2",
     "husky": "^7.0.2",
     "lint-staged": "^12.1.2",
     "node-plantuml": "windranger-io/node-plantuml#fcfc730",
-    "bitdao-token-contract": "windranger-io/bit-token-contract#v1.0.0",
-    "prettier": "^2.5.0",
+    "prettier": "^2.4.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.18",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.5.2",
-    "web3": "^1.6.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.18"
+    "typescript": "^4.4.2",
+    "web3": "^1.6.1"
   },
   "dependencies": {
     "bunyan": "^1.8.15",
