--- a/.github/workflows/master-push-pull.yaml
+++ b/.github/workflows/master-push-pull.yaml
@@ -74,3 +74,35 @@ jobs:
 
       - name: Lint
         run: npm run lint
+
+  Solidity-Static-Analysis-Solhint:
+    runs-on: ubuntu-latest
+    name: Solidity static analysis (Solhint)
+    needs: Unit-Tests
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - uses: actions/cache@v2
+        name: Set up cache
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Set up node
+        uses: actions/setup-node@v2.5.0
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Set ENV
+        run: mv .env.ci .env
+
+      - name: Build application
+        run: npm run build
+
+      - name: Lint
+        run: npm run lint-sol
