feat(ci): slither

--- a/.github/workflows/master-push-pull.yaml
+++ b/.github/workflows/master-push-pull.yaml
@@ -106,3 +106,23 @@ jobs:
 
       - name: Lint
         run: npm run lint-sol
+  
+  Solidity-Static-Analysis-Slither:
+    runs-on: ubuntu-latest
+    name: Solidity static analysis (Slither)
+    needs: Unit-Tests
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/cache@v2
+        name: Set up cache
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Slither Static Analysis
+        uses: luisfontes19/slither-static-analysis-action@v0.3.4
+        with:
+          slither-params: '--filter-paths "contracts/test|contracts/treasury|node_modules" --exclude solc-version'
